--- a/src/regridStates/README
+++ b/src/regridStates/README
@@ -4,7 +4,7 @@ Clara Draper, Aug 17, 2024.
 
 * Uses bi-linear interpolation, with masking of the input and output. 
 * Current masking options are all soil (land, no glaciers) and snow-free soil (input increment only)
-* Does not guarantee all output grid cells with have mapped values, by design. CANNOT BY USED FOR RESTARTS (could be changed though).
+* Does not guarantee all output grid cells will have mapped values, by design. CANNOT BY USED FOR RESTARTS (could be changed though).
 * Output grid cells that do not have a value after the interpolation step are filled with the nearest neighbouring output grid cell. If there are no mapped neighbours within two layers of surrounding neighbours, the output grid cell will remain unmapped. In this way, islands do not get filled with distant values. 
 * Reads in / writes out fv3 files and Gaussian grid (gsi output increment) files.
 * Handling Gaussian files requires a scrip file with the grid details. This can be generated using the ufs_utils weigh_gen program.
